# tilemap-parser

./: .gitignore  CHANGELOG.md  DOCS_EVOLUTION.md  FINAL_REVISION_ON_TOP_OBJ_COLLISION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_READY.md  IMPLEMETATION_READY_MINOR_QUALITY.md  OBJECT_COLLISION_IMPLEMENTATION_PLAN.md  OBJECT_COLLISION_INDEX.md  OBJECT_COLLISION_SUMMARY.md  PLANNING_COMPLETE.md  POSSIBILITY_OBJ_COLLIISION.md  README.md  README_OBJECT_COLLISION.md  REVISED_IMPLEMENTATION_PLAN.md  collision_slope_slide_changes.md  collision_sync_verification.md  pyproject.toml  requirements.txt
examples/: collision.json  collision_data.json  example.py  game_type_example.py  map.json  red hood itch free Copy-Sheet.anim.json
examples/01-map-loading/: map_loading_dev.py  map_loading_prod.py
examples/02-animation/: basic_playback_dev.py  basic_playback_prod.py
examples/03-collision/: character_dev.py  character_prod.py  tileset_dev.py  tileset_prod.py
examples/04-rendering/: tile_renderer_dev.py  tile_renderer_prod.py
examples/05-complete-game/: platformer_dev.py  (+1 more)
scripts/: dev-aliases.sh  pypi-release.sh
tests/: conftest.py  test_collision.py  test_collision_runner.py  test_geometry.py  test_gid_collision.py  test_integration_animation.py  test_integration_collision.py  test_integration_map_loader.py  test_map_loader.py  test_map_object.py  test_object_collision.py  test_object_surfaces.py  test_render_scale.py  test_tile_collision.py  test_tmx_converter.py
webdocs/: PLAN.md  UI_UX_IMPROVEMENTS.md  index.html  package-lock.json  package.json
(+123 files in other folders)
