[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tilemap-parser"
version = "1.1.1"
description = "Standalone parser/loader for tilemap-editor JSON maps and sprite animation JSON."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "tilemap parser contributors" }]
dependencies = [
  "pygame-ce>=2.5",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["tilemap_parser*"]
namespaces = false
